# sberworks-test

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.json
app/: api.py  api_test.py  config.py  elastic_funcs.py  main.py  script.py
